2015-02-28  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Check for gettid availability
	* configure: Regenerate
	* Headers/GNUstepBase/config.h.in: Regenerate
	* Source/GSPrivate.h: Update comment on GSLogThread
	* Documentation/Base.gsdoc: Update doc of GSLogThread
	* Source/NSLog.m: Change to log thread ID (to match OSX which now
	logs the thread ID along with the process ID).  Change the meaning
	of the GSLogThread user default (which used to turn on logging of
	the thread ID) so that it now turns on logging of the thread name
	(where a thread name has been set) and the NSThread address if no
	name has been set.

2015-02-16  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSData.m (writeToFile:options:error:): Fix leak of open
	file descriptor on systems where mkstemp is defined.

2015-02-15  Richard Frith-Macdonald <rfm@gnu.org>

	* config/objc-sys-dynamic.m4: Check for windows before anything else
	* configure: regenerate
	Apparently recent mingw implements headers which folled configure
	into using dlopen() with doesn't support native windows paths ...
	change order of checks so we still use the native API.

2015-02-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSThread.m: Be more agressive about releasing thread
	resources when a thread exists (in particular release the
	thread's runloop repeatedly for bug #44240) in case of the
	deallocation of objects causing re-population of thread data.

2015-02-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSData.m: Simplify mingw/unixy ifdefs for writing a file.
	* Source/NSThread.m: Simplify mingw/unixy ifdefs for sleeping.

2015-02-05 	Niels Grewe <niels.grewe@halbordnung.de>

	* Source/GSTLS.m: Use path standardization when setting up TLS data
	to be mapped to a specific filesystem location.

2015-01-13  Marcus Mueller <znek@mulle-kybernetik.com>

	* Headers/Foundation/Foundation.h: added NSUUID.h 

2014-12-28  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* configure.ac: